# kokos

./: .clang-format  README.md  README.org  TODO.md  meson.build  shell.nix
examples/: fibonacci.kokos  files.kokos  full.kokos
include/: base.h
interpreter/: meson.build
interpreter/src/: env.c  env.h  gc.c  gc.h  interpreter.c  interpreter.h  main.c  map.c  map.h  obj.c  obj.h  parser.c  parser.h  util.c  util.h
lexer/: meson.build
lexer/src/: lexer.c  lexer.h  location.h  token.h
tests/: interpreter_test.c  lexer_test.c  meson.build  parser_test.c
vm/: meson.build
vm/src/: ast.h  bytecode-assembler.h  compile.c  compile.h  env.c  env.h  gc.c  gc.h  hash.c  hash.h  instruction.c  instruction.h  macro.h  macros.h  main.c  native.c  native.h  parser.c  parser.h  runtime.c  runtime.h  scope.c  scope.h  sform.c  string-store.c  string-store.h  value.c  value.h  vm.c  vm.h  vmconstants.h
